--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>小官网</title>
+    <meta name="viewport" content="width=device-width", initial-scale=1.0/>
+<!--    引入scrollView插件，防止闪动-->
+    <script src="libs/scrollReveal/scrollreveal.min.js"></script>
 <!--    引入字体-->
     <link rel="stylesheet" href="font/font-awesome-4.7.0/css/font-awesome.min.css">
 <!--引入glide_css-->
